# ShaderLLM

./: .gitignore  README.md  ShaderLLM_Revised_Plan.md  docker-compose.yml
backend/: .env.example  Dockerfile  HARNESS.md  pyproject.toml
backend/app/: config.py  main.py  middleware.py
backend/app/agent/: error_handling.py  graph.py  prompts.py  state.py  utils.py
backend/app/agent/examples/: __init__.py  corridor_raymarched.glsl  fire_flames.glsl  grass_field.glsl  manifest.json  neon_orb.glsl  ocean_waves.glsl  spiral_tunnel.glsl  sunset_water.glsl
backend/app/agent/nodes/: draft.py  draft_dsl.py  finalize.py  repair.py  validate.py
backend/app/agent/prompts/: __init__.py
backend/app/agent/prompts/v0/: prompts.py
backend/app/agent/prompts/v1/: prompts.py
backend/app/agent/prompts/v2/: prompts.py
backend/app/dsl/: __init__.py  cache.py  compiler.py  operations.py  schema.py
backend/app/llm/: provider.py
backend/app/models/: events.py  requests.py
backend/app/routes/: generate.py  health.py  history.py
backend/app/services/: conversation.py  filelock.py  logger.py
backend/app/tools/: glsl_validator.py
backend/tests/: test_conversation.py  test_dsl_compiler.py  test_dsl_schema.py  test_graph.py  test_logger.py  test_tools.py
frontend/: DESIGN_GUIDE.md  Dockerfile.prod  TODO.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: sessions.ts  sse.ts
frontend/src/components/: CanvasControls.tsx  ChatMessage.tsx  ChatPanel.tsx  ErrorOverlay.tsx  SessionSidebar.tsx  (+5 more)
(+12 files in other folders)
